[update]各パラメータの値に制限をかけた

--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>977</width>
-    <height>701</height>
+    <height>703</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -410,7 +410,11 @@
          </widget>
         </item>
         <item row="3" column="1">
-         <widget class="QSpinBox" name="spinBox_7"/>
+         <widget class="QSpinBox" name="loop_count_2">
+          <property name="maximum">
+           <number>15</number>
+          </property>
+         </widget>
         </item>
         <item row="0" column="0">
          <widget class="QCheckBox" name="checkBox_5">
@@ -420,19 +424,51 @@
          </widget>
         </item>
         <item row="2" column="1">
-         <widget class="QSpinBox" name="spinBox_6"/>
+         <widget class="QSpinBox" name="maxval_2">
+          <property name="maximum">
+           <number>80</number>
+          </property>
+         </widget>
         </item>
         <item row="5" column="1">
-         <widget class="QSpinBox" name="spinBox_8"/>
-        </item>
-        <item row="6" column="1">
-         <widget class="QSpinBox" name="spinBox_9"/>
+         <widget class="QSpinBox" name="beam_width_2">
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>10000</number>
+          </property>
+         </widget>
         </item>
         <item row="10" column="1">
-         <widget class="QSpinBox" name="spinBox_10"/>
+         <widget class="QSpinBox" name="move_count_2">
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>9</number>
+          </property>
+         </widget>
         </item>
         <item row="12" column="1">
-         <widget class="QDoubleSpinBox" name="doubleSpinBox_2"/>
+         <widget class="QDoubleSpinBox" name="predict_weight_2">
+          <property name="minimum">
+           <double>-5.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>5.000000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="1">
+         <widget class="QDoubleSpinBox" name="ally_weight_3">
+          <property name="minimum">
+           <double>-5.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>5.000000000000000</double>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -494,7 +530,7 @@
          </widget>
         </item>
         <item row="10" column="0">
-         <widget class="QLabel" name="label_14">
+         <widget class="QLabel" name="ally_weight">
           <property name="text">
            <string>ally_weight</string>
           </property>
@@ -508,14 +544,14 @@
          </widget>
         </item>
         <item row="11" column="0">
-         <widget class="QLabel" name="label_15">
+         <widget class="QLabel" name="move_count">
           <property name="text">
            <string>move_count</string>
           </property>
          </widget>
         </item>
         <item row="9" column="0">
-         <widget class="QLabel" name="label_13">
+         <widget class="QLabel" name="beam_width">
           <property name="text">
            <string>beam_width</string>
           </property>
@@ -529,19 +565,38 @@
          </widget>
         </item>
         <item row="5" column="1">
-         <widget class="QSpinBox" name="spinBox"/>
+         <widget class="QSpinBox" name="maxval">
+          <property name="maximum">
+           <number>80</number>
+          </property>
+         </widget>
         </item>
         <item row="7" column="1">
-         <widget class="QSpinBox" name="spinBox_2"/>
+         <widget class="QSpinBox" name="loop_count">
+          <property name="maximum">
+           <number>15</number>
+          </property>
+         </widget>
         </item>
         <item row="9" column="1">
-         <widget class="QSpinBox" name="spinBox_3"/>
-        </item>
-        <item row="10" column="1">
-         <widget class="QSpinBox" name="spinBox_4"/>
+         <widget class="QSpinBox" name="spinBox_3">
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>10000</number>
+          </property>
+         </widget>
         </item>
         <item row="11" column="1">
-         <widget class="QSpinBox" name="spinBox_5"/>
+         <widget class="QSpinBox" name="spinBox_5">
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>9</number>
+          </property>
+         </widget>
         </item>
         <item row="8" column="0">
          <widget class="QCheckBox" name="checkBox_3">
@@ -551,7 +606,14 @@
          </widget>
         </item>
         <item row="12" column="1">
-         <widget class="QDoubleSpinBox" name="doubleSpinBox"/>
+         <widget class="QDoubleSpinBox" name="predict_weight">
+          <property name="minimum">
+           <double>-5.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>5.000000000000000</double>
+          </property>
+         </widget>
         </item>
         <item row="5" column="0">
          <widget class="QLabel" name="label_8">
@@ -564,6 +626,16 @@
          <widget class="QLabel" name="label_16">
           <property name="text">
            <string>predict_weight</string>
+          </property>
+         </widget>
+        </item>
+        <item row="10" column="1">
+         <widget class="QDoubleSpinBox" name="ally_weight_2">
+          <property name="minimum">
+           <double>-5.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>5.000000000000000</double>
           </property>
          </widget>
         </item>
