--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -363,7 +363,7 @@
         <item row="10" column="0">
          <widget class="QLabel" name="label_20">
           <property name="text">
-           <string>move_count</string>
+           <string>movecount</string>
           </property>
          </widget>
         </item>
@@ -375,7 +375,7 @@
          </widget>
         </item>
         <item row="4" column="0">
-         <widget class="QCheckBox" name="checkBox_6">
+         <widget class="QCheckBox" name="use_beamsearch_2">
           <property name="text">
            <string>use_beamsearch</string>
           </property>
@@ -403,7 +403,7 @@
          </widget>
         </item>
         <item row="1" column="0">
-         <widget class="QCheckBox" name="checkBox_4">
+         <widget class="QCheckBox" name="dock_show_2">
           <property name="text">
            <string>dock_show</string>
           </property>
@@ -417,7 +417,7 @@
          </widget>
         </item>
         <item row="0" column="0">
-         <widget class="QCheckBox" name="checkBox_5">
+         <widget class="QCheckBox" name="vis_show_2">
           <property name="text">
            <string>vis_show</string>
           </property>
@@ -441,7 +441,7 @@
          </widget>
         </item>
         <item row="10" column="1">
-         <widget class="QSpinBox" name="move_count_2">
+         <widget class="QSpinBox" name="movecount_2">
           <property name="minimum">
            <number>1</number>
           </property>
@@ -461,7 +461,7 @@
          </widget>
         </item>
         <item row="6" column="1">
-         <widget class="QDoubleSpinBox" name="ally_weight_3">
+         <widget class="QDoubleSpinBox" name="ally_weight_2">
           <property name="minimum">
            <double>-5.000000000000000</double>
           </property>
@@ -530,37 +530,30 @@
          </widget>
         </item>
         <item row="10" column="0">
-         <widget class="QLabel" name="ally_weight">
+         <widget class="QLabel" name="label_ally_weight">
           <property name="text">
            <string>ally_weight</string>
           </property>
          </widget>
         </item>
         <item row="1" column="0">
-         <widget class="QCheckBox" name="checkBox">
+         <widget class="QCheckBox" name="dock_show">
           <property name="text">
            <string>dock_show</string>
           </property>
          </widget>
         </item>
         <item row="11" column="0">
-         <widget class="QLabel" name="move_count">
+         <widget class="QLabel" name="label_movecount">
           <property name="text">
-           <string>move_count</string>
+           <string>movecount</string>
           </property>
          </widget>
         </item>
         <item row="9" column="0">
-         <widget class="QLabel" name="beam_width">
+         <widget class="QLabel" name="label_beam_width">
           <property name="text">
            <string>beam_width</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0">
-         <widget class="QCheckBox" name="checkBox_2">
-          <property name="text">
-           <string>vis_show</string>
           </property>
          </widget>
         </item>
@@ -579,7 +572,7 @@
          </widget>
         </item>
         <item row="9" column="1">
-         <widget class="QSpinBox" name="spinBox_3">
+         <widget class="QSpinBox" name="beam_width">
           <property name="minimum">
            <number>1</number>
           </property>
@@ -589,7 +582,7 @@
          </widget>
         </item>
         <item row="11" column="1">
-         <widget class="QSpinBox" name="spinBox_5">
+         <widget class="QSpinBox" name="movecount">
           <property name="minimum">
            <number>1</number>
           </property>
@@ -599,7 +592,7 @@
          </widget>
         </item>
         <item row="8" column="0">
-         <widget class="QCheckBox" name="checkBox_3">
+         <widget class="QCheckBox" name="use_beamsearch">
           <property name="text">
            <string>use_beamsearch</string>
           </property>
@@ -630,12 +623,19 @@
          </widget>
         </item>
         <item row="10" column="1">
-         <widget class="QDoubleSpinBox" name="ally_weight_2">
+         <widget class="QDoubleSpinBox" name="ally_weight">
           <property name="minimum">
            <double>-5.000000000000000</double>
           </property>
           <property name="maximum">
            <double>5.000000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QCheckBox" name="vis_show">
+          <property name="text">
+           <string>vis_show</string>
           </property>
          </widget>
         </item>
