--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -401,6 +401,9 @@
           <property name="maximum">
            <number>15</number>
           </property>
+          <property name="value">
+           <number>4</number>
+          </property>
          </widget>
         </item>
         <item row="0" column="0">
@@ -415,6 +418,9 @@
           <property name="maximum">
            <number>80</number>
           </property>
+          <property name="value">
+           <number>10</number>
+          </property>
          </widget>
         </item>
         <item row="5" column="1">
@@ -424,6 +430,9 @@
           </property>
           <property name="maximum">
            <number>10000</number>
+          </property>
+          <property name="value">
+           <number>1000</number>
           </property>
          </widget>
         </item>
@@ -435,6 +444,9 @@
           <property name="maximum">
            <number>9</number>
           </property>
+          <property name="value">
+           <number>3</number>
+          </property>
          </widget>
         </item>
         <item row="12" column="1">
@@ -445,6 +457,9 @@
           <property name="maximum">
            <double>5.000000000000000</double>
           </property>
+          <property name="value">
+           <double>0.300000000000000</double>
+          </property>
          </widget>
         </item>
         <item row="6" column="1">
@@ -454,6 +469,9 @@
           </property>
           <property name="maximum">
            <double>5.000000000000000</double>
+          </property>
+          <property name="value">
+           <double>1.000000000000000</double>
           </property>
          </widget>
         </item>
@@ -471,6 +489,9 @@
           </property>
           <property name="maximum">
            <double>1.000000000000000</double>
+          </property>
+          <property name="value">
+           <double>0.030000000000000</double>
           </property>
          </widget>
         </item>
@@ -566,12 +587,18 @@
           <property name="maximum">
            <number>80</number>
           </property>
+          <property name="value">
+           <number>10</number>
+          </property>
          </widget>
         </item>
         <item row="7" column="1">
          <widget class="QSpinBox" name="loop_count">
           <property name="maximum">
            <number>15</number>
+          </property>
+          <property name="value">
+           <number>4</number>
           </property>
          </widget>
         </item>
@@ -583,6 +610,9 @@
           <property name="maximum">
            <number>10000</number>
           </property>
+          <property name="value">
+           <number>1000</number>
+          </property>
          </widget>
         </item>
         <item row="11" column="1">
@@ -592,6 +622,9 @@
           </property>
           <property name="maximum">
            <number>9</number>
+          </property>
+          <property name="value">
+           <number>3</number>
           </property>
          </widget>
         </item>
@@ -609,6 +642,9 @@
           </property>
           <property name="maximum">
            <double>5.000000000000000</double>
+          </property>
+          <property name="value">
+           <double>0.300000000000000</double>
           </property>
          </widget>
         </item>
@@ -634,6 +670,9 @@
           <property name="maximum">
            <double>5.000000000000000</double>
           </property>
+          <property name="value">
+           <double>1.000000000000000</double>
+          </property>
          </widget>
         </item>
         <item row="0" column="0">
@@ -657,6 +696,9 @@
           </property>
           <property name="maximum">
            <double>1.000000000000000</double>
+          </property>
+          <property name="value">
+           <double>0.030000000000000</double>
           </property>
          </widget>
         </item>
@@ -711,7 +753,7 @@
      <x>0</x>
      <y>0</y>
      <width>977</width>
-     <height>33</height>
+     <height>18</height>
     </rect>
    </property>
   </widget>
