--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -121,6 +121,11 @@
       </item>
       <item>
        <property name="text">
+        <string>WarshallFloydAlgorithm</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
         <string>MajorityRuleWithAbstData</string>
        </property>
       </item>
@@ -233,6 +238,11 @@
       <item>
        <property name="text">
         <string>DepthFirstSearch</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>WarshallFloydAlgorithm</string>
        </property>
       </item>
       <item>
@@ -763,7 +773,7 @@
      <x>0</x>
      <y>0</y>
      <width>977</width>
-     <height>33</height>
+     <height>18</height>
     </rect>
    </property>
   </widget>
