--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -756,10 +756,22 @@
      </widget>
     </item>
     <item row="10" column="2">
-     <widget class="QCheckBox" name="SetRandomParams">
-      <property name="text">
-       <string>SetRandomParams</string>
-      </property>
+     <widget class="QComboBox" name="SetParamsBox">
+      <item>
+       <property name="text">
+        <string>Default</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>SetRandomParams</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>SetParamsFromCSV</string>
+       </property>
+      </item>
      </widget>
     </item>
    </layout>
