--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -775,6 +775,19 @@
       </property>
      </widget>
     </item>
+    <item row="2" column="0">
+     <widget class="QSpinBox" name="finalTurn">
+      <property name="minimum">
+       <number>40</number>
+      </property>
+      <property name="maximum">
+       <number>80</number>
+      </property>
+      <property name="value">
+       <number>60</number>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -783,7 +796,7 @@
      <x>0</x>
      <y>0</y>
      <width>977</width>
-     <height>18</height>
+     <height>33</height>
     </rect>
    </property>
   </widget>
